syntax = "proto3";

package test.integration.typed_metadata;

message TestAccessLog {
}
